--- a/escribir.html
+++ b/escribir.html
@@ -17,7 +17,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
-    <title>Medium</title>
+    <title>New Story - Medium</title>
 </head>
 
 <body>
@@ -104,7 +104,7 @@
                                 </li>
                                 <li class="d-flex">
                                     <div>
-                                        <a class="dropdown-item" href="#"><img
+                                        <a class="dropdown-item" href="./profile.html"><img
                                                 src="https://miro.medium.com/fit/c/32/32/0*8auegPxo9CwNeu0J"
                                                 class="avatar" width="32" height="32"></a>
                                     </div>
@@ -130,7 +130,7 @@
         <div class=" d-flex centro">
             <!--INICIA MENU SUPERIOR PARA MOBILE-->
             <div class="xbars d-flex justify-content-between align-items-center fixed-top border border-1 bg-white">
-                <a href="./index2.html"><img width="50px" src="./img/medium_icon.fw.png"></img></a>
+                <a href="./home.html"><img width="50px" src="./img/medium_icon.fw.png"></img></a>
                 <div>
                     <a href="#" class="openBton text-success text-decoration-none ">Open in app</a>
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -278,7 +278,7 @@
                     </div>
 
                     <div class="d-flex justify-content-center align-items-center">
-                        <a href="./index2.html"><img width="50px" class="pt-2" src="./img/icon_left.jpg"></img></a>
+                        <a href="./home.html"><img width="50px" class="pt-2" src="./img/icon_left.jpg"></img></a>
                         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="gray"
                             class="bi bi-align-middle" viewBox="0 0 16 16">
                             <path
