--- a/template_mobile_first.html
+++ b/template_mobile_first.html
@@ -18,7 +18,7 @@
     <div class="container-fluid  h-auto d-inline-block">
 
         <div class="d-flex justify-content-between align-items-center fixed-top border border-1">
-            <a href="./index2.html"><img width="50px" src="./img/medium_icon.fw.png"></img></a>
+            <a href="./home.html"><img width="50px" src="./img/medium_icon.fw.png"></img></a>
             <div>
                 <a href="#" class="text-success text-decoration-none letrapequeña">Open in app</a>
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bell"
